# stratum

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  critical_review_by_codex.md  pyproject.toml
knowledge/: knowledge_distillation.md  whitesides_standard.txt
scripts/: graph_demo.py  graph_demo.sh  quickstart.sh  run.sh
src/stratum/: crew.py  flow.py  main.py
src/stratum/agents/: analyst.py  archivist.py  librarian.py
src/stratum/config/: agents.yaml  settings.py  tasks.yaml
src/stratum/llm/: provider.py
src/stratum/models/: citation.py  knowledge_table.py  metadata.py  state.py
src/stratum/tasks/: analyze_paper.py  archive_paper.py  fetch_paper.py
src/stratum/tools/: base.py  citation_finder.py  obsidian_formatter.py  paper_fetcher.py  pdf_extractor.py
src/stratum/utils/: __init__.py  errors.py  graph_builder.py  recursion.py
tests/: conftest.py
tests/fixtures/graph_sample/: primary.md  secondary.md
tests/integration/: __init__.py  test_cli.py  test_workflow.py
tests/unit/: test_agents.py  test_crew.py  test_graph_builder.py  test_graph_format_spec.py  test_llm.py  test_models.py  test_recursion.py  test_tools.py
